// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Label
    classes={
      Object {
        "blue": "blue",
        "close": "close",
        "cursor": "cursor",
        "default": "default",
        "label": "label",
      }
    }
    theme="default"
  >
    Label
  </Label>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "Label",
        undefined,
      ],
      "className": "label default",
      "id": undefined,
      "onClick": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      "Label",
      undefined,
    ],
    "type": "label",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Label",
          undefined,
        ],
        "className": "label default",
        "id": undefined,
        "onClick": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        "Label",
        undefined,
      ],
      "type": "label",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Label styles matches the snapshot 1`] = `
Object {
  "blue": Object {
    "& $close": Object {
      "&:after": Object {
        "background": "url(data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgogICAgICAgICAgICAJIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMjQgMjQ7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KICAgICAgICAgICAgPHBvbHlnb24gZmlsbD0iI2ZmZmZmZiIgcG9pbnRzPSIxOCw2LjggMTcuMiw2IDEyLDExLjIgNi44LDYgNiw2LjggMTEuMiwxMiA2LDE3LjIgNi44LDE4IDEyLDEyLjggMTcuMiwxOCAxOCwxNy4yIDEyLjgsMTIgIi8+CiAgICAgICAgICAgIDwvc3ZnPg==)",
      },
      "&:before": Object {
        "background": "#083cae",
      },
    },
    "background": "#083cae",
    "borderColor": "#083cae",
    "color": "#ffffff",
  },
  "close": Object {
    "&:after": Object {
      "background": "url(data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgogICAgICAgICAgICAJIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMjQgMjQ7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KICAgICAgICAgICAgPHBvbHlnb24gZmlsbD0iI2FiYjZiZCIgcG9pbnRzPSIxOCw2LjggMTcuMiw2IDEyLDExLjIgNi44LDYgNiw2LjggMTEuMiwxMiA2LDE3LjIgNi44LDE4IDEyLDEyLjggMTcuMiwxOCAxOCwxNy4yIDEyLjgsMTIgIi8+CiAgICAgICAgICAgIDwvc3ZnPg==)",
      "content": "\\"\\"",
      "height": "18px",
      "left": "0",
      "position": "absolute",
      "top": "0",
      "width": "18px",
    },
    "&:before": Object {
      "background": "#ffffff",
      "borderRadius": "50%",
      "content": "\\"\\"",
      "filter": "blur(10px)",
      "height": "50px",
      "left": "-16px",
      "position": "absolute",
      "top": "-16px",
      "width": "50px",
    },
    "&:hover": Object {
      "opacity": "1",
    },
    "borderRadius": "50%",
    "cursor": "pointer",
    "display": "block",
    "height": "18px",
    "opacity": "0",
    "position": "absolute",
    "right": "4px",
    "top": "1px",
    "transition": "0.3s all",
    "width": "18px",
  },
  "cursor": Object {
    "cursor": "pointer",
  },
  "default": Object {
    "background": "#ffffff",
    "borderColor": "#979797",
    "color": "#979797",
  },
  "label": Object {
    "border": "1px solid",
    "borderRadius": "11px",
    "boxSizing": "border-box",
    "display": "inline-block",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": "11px",
    "fontWeight": "normal",
    "height": "22px",
    "lineHeight": "20px",
    "marginRight": "5px",
    "overflow": "hidden",
    "padding": "0 15px",
    "position": "relative",
    "textAlign": "center",
  },
}
`;

exports[`LabelJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Label)
    theme="default"
  >
    Label
  </Jss(Label)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "Label",
      "classes": Object {
        "blue": "Label-blue-0-1-4",
        "close": "Label-close-0-1-5",
        "cursor": "Label-cursor-0-1-2",
        "default": "Label-default-0-1-3",
        "label": "Label-label-0-1-1",
      },
      "theme": "default",
    },
    "ref": null,
    "rendered": "Label",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Label",
        "classes": Object {
          "blue": "Label-blue-0-1-4",
          "close": "Label-close-0-1-5",
          "cursor": "Label-cursor-0-1-2",
          "default": "Label-default-0-1-3",
          "label": "Label-label-0-1-1",
        },
        "theme": "default",
      },
      "ref": null,
      "rendered": "Label",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
